match-match-game/fix: fonts, colors, inline-spacing

--- a/match-match-game/css/styles.css
+++ b/match-match-game/css/styles.css
@@ -1,6 +1,7 @@
 * {
   margin: 0;
   padding: 0;
+  font-family: 'Arial';
   text-decoration: none;
   -moz-box-sizing: border-box; /* Для Firefox */
   -webkit-box-sizing: border-box; /* Для Safari и Chrome */
@@ -23,7 +24,6 @@ body {
 
 body > header {
   width: 100%;
-  height: 75px;
   text-align: center;
   background-color: rgb(0, 0, 255);
   border-radius: 0px 0px 25px 25px;
@@ -32,20 +32,17 @@ body > header {
 
 main {
   min-height: 100%;
-  padding-bottom: 75px;
+  padding-bottom: 50px;
   height: auto;
 }
 
 /*debag*/
-main * {
+.table * {
     border: 1px solid red;
 }
 
 .table {
   text-align: center;
-}
-.table > .wrapper{
-  text-align: left;
 }
 
 .card {
@@ -70,10 +67,7 @@ main * {
 
 footer {
   width: 100%;
-  height: 75px;
-  font-family: 'Arial';
   font-size: 33px;
-  color: white;
   background-color: rgb(0, 0, 255);
   border-radius: 25px 25px 0px 0px;
   position: absolute;
